[gd_scene load_steps=2 format=3 uid="uid://p71dw01qrd6g"]

[ext_resource type="Script" path="res://src/main/scene/ui/test_audio.gd" id="1_pu2p7"]

[node name="TestAudio" type="CanvasLayer"]
script = ExtResource("1_pu2p7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -25.0
offset_right = 220.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "音乐1"

[node name="Button2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "音乐2"

[node name="Button3" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "音效"

[node name="ReturnButton" type="Button" parent="."]
custom_minimum_size = Vector2(120, 50)
offset_right = 88.0
offset_bottom = 31.0
text = "返回主界面"

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
